# bzlmodRio

./: .bazelignore  .bazelrc  .bazelrc-buildbuddy  .bazelrc-java  .gitattributes  .gitignore  .styleguide  MODULE.bazel  README.md  WORKSPACE  bzlmodrio_dependencies.bzl  bzlmodrio_setup.bzl  defs.bzl  deps.bzl  replace_legacy_names.sh  update_deps_to_bzlmodrio.sh
.github/actions/setup-build-buddy/: action.yml
.github/workflows/: build.yml  lint.yml  publish.yml
constraints/is_roborio/: BUILD  BUILD.bazel
generate/: BUILD  BUILD.bazel  WORKSPACE  clean_all_projects.sh  format_subprojects.sh  generate.py  generate_mega_group.py  generate_subprojects.sh  get_libraries.py  get_libraries_remapping.py  get_mega_group.py  load_repos.py  project_list.sh  test_subprojects_bzlmod.sh  test_subprojects_legacy.sh
generate/templates/: library_alias.jinja2  load_library.jinja2
generate/templates/mega_group/: BUILD.bazel.jinja2  WORKSPACE.jinja2  get_mega_group.py.jinja2
generate/templates/module/: MODULE.bazel.jinja2  WORKSPACE.jinja2  defs.bzl.jinja2  replace_legacy_names.sh.jinja2
generate/templates/module/constraints/is_roborio/: BUILD.jinja2
generate/templates/module/private/non_bzlmod/: create_null_repository.bzl.jinja2  download_dependencies.bzl.jinja2  setup_dependencies.bzl.jinja2
generate/templates/module/tests/: MODULE.bazel.jinja2  WORKSPACE.jinja2
generate/tools/: format_subprojects.sh
libraries/cpp/apriltaglib/: BUILD
libraries/cpp/ctre/phoenix/: BUILD
libraries/cpp/imgui/: BUILD
libraries/cpp/kauailabs/navx/: BUILD
libraries/cpp/libssh/: BUILD
libraries/cpp/opencv/: BUILD.bazel
libraries/cpp/rev/revlib/: BUILD  BUILD.bazel
libraries/cpp/wpilib/cameraserver/: BUILD
libraries/cpp/wpilib/cscore/: BUILD  BUILD.bazel
libraries/cpp/wpilib/hal/: BUILD
libraries/cpp/wpilib/new_commands/: BUILD
libraries/cpp/wpilib/ntcore/: BUILD  BUILD.bazel
libraries/cpp/wpilib/wpilibc/: BUILD
libraries/cpp/wpilib/wpimath/: BUILD
libraries/cpp/wpilib/wpinet/: BUILD  BUILD.bazel
libraries/cpp/wpilib/wpiutil/: BUILD
libraries/java/ctre/phoenix/: BUILD  BUILD.bazel
libraries/java/kauailabs/navx/: BUILD
libraries/java/opencv/: BUILD
libraries/java/rev/revlib/: BUILD
libraries/java/wpilib/cameraserver/: BUILD  BUILD.bazel
libraries/java/wpilib/cscore/: BUILD
libraries/java/wpilib/hal/: BUILD
libraries/java/wpilib/new_commands/: BUILD
libraries/java/wpilib/ntcore/: BUILD  BUILD.bazel
libraries/java/wpilib/shuffleboard/: BUILD
libraries/java/wpilib/wpilibj/: BUILD
libraries/java/wpilib/wpimath/: BUILD
libraries/java/wpilib/wpinet/: BUILD  BUILD.bazel
libraries/java/wpilib/wpiutil/: BUILD  BUILD.bazel
libraries/tools/glass/: BUILD
libraries/tools/pathweaver/: BUILD
libraries/tools/robotbuilder/: BUILD  BUILD.bazel
libraries/tools/shuffleboard/: BUILD  BUILD.bazel
libraries/tools/smartdashboard/: BUILD  BUILD.bazel
private/non_bzlmod/: create_null_repository.bzl  download_dependencies.bzl  setup_dependencies.bzl
private/non_bzlmod/smart_dependencies/allwpilib/: load_allwpilib.bzl
private/non_bzlmod/smart_dependencies/bzlmodrio-allwpilib/: load_bzlmodrio-allwpilib.bzl
private/non_bzlmod/smart_dependencies/bzlmodrio-apriltaglib/: load_bzlmodrio-apriltaglib.bzl
private/non_bzlmod/smart_dependencies/bzlmodrio-choreolib/: load_bzlmodrio-choreolib.bzl
private/non_bzlmod/smart_dependencies/bzlmodrio-ctre/: load_bzlmodrio-ctre.bzl
private/non_bzlmod/smart_dependencies/bzlmodrio-imgui/: load_bzlmodrio-imgui.bzl
private/non_bzlmod/smart_dependencies/bzlmodrio-libssh/: load_bzlmodrio-libssh.bzl
private/non_bzlmod/smart_dependencies/bzlmodrio-navx/: load_bzlmodrio-navx.bzl
private/non_bzlmod/smart_dependencies/bzlmodrio-ni/: load_bzlmodrio-ni.bzl
private/non_bzlmod/smart_dependencies/bzlmodrio-opencv/: load_bzlmodrio-opencv.bzl
private/non_bzlmod/smart_dependencies/bzlmodrio-pathplannerlib/: load_bzlmodrio-pathplannerlib.bzl
private/non_bzlmod/smart_dependencies/bzlmodrio-phoenix/: load_bzlmodrio-phoenix.bzl
private/non_bzlmod/smart_dependencies/bzlmodrio-phoenix6/: load_bzlmodrio-phoenix6.bzl
private/non_bzlmod/smart_dependencies/bzlmodrio-photonlib/: load_bzlmodrio-photonlib.bzl
private/non_bzlmod/smart_dependencies/bzlmodrio-revlib/: load_bzlmodrio-revlib.bzl
private/non_bzlmod/smart_dependencies/ctre/: load_ctre.bzl
private/non_bzlmod/smart_dependencies/gentool/: load_gentool.bzl
private/non_bzlmod/smart_dependencies/navx/: load_navx.bzl
private/non_bzlmod/smart_dependencies/ni/: load_ni.bzl
private/non_bzlmod/smart_dependencies/opencv/: load_opencv.bzl
private/non_bzlmod/smart_dependencies/rev/: load_rev.bzl
private/non_bzlmod/smart_dependencies/rules_bazelrio/: load_rules_bazelrio.bzl
private/non_bzlmod/smart_dependencies/rules_bzlmodrio_jdk/: load_rules_bzlmodrio_jdk.bzl
private/non_bzlmod/smart_dependencies/rules_checkstyle/: load_rules_checkstyle.bzl
tests/: .bazelrc  .bazelrc-buildbuddy  .bazelrc-cc  MODULE.bazel  WORKSPACE
tests/robot/: BUILD.bazel  main.cpp  robot.cpp  robot.hpp
tests/robot-cpp/: BUILD.bazel  main.cpp  robot.cpp  robot.hpp
tests/robot-cpp/commands/: BUILD  elevator_setpoint_command.cpp  elevator_setpoint_command.hpp  joystick_drive_command.cpp  joystick_drive_command.hpp  shooter_rpm_command.cpp  shooter_rpm_command.hpp
tests/robot-cpp/subsystems/: BUILD  drivetrain.cpp  drivetrain.hpp  elevator.cpp  elevator.hpp  shooter.cpp  shooter.hpp
tests/robot-java/: BUILD
tests/robot-java/src/main/java/frc/robot/: BUILD  RobotContainer.java
tests/robot-java/src/main/java/frc/robot/commands/: BUILD  JoystickDriveCommand.java  SetElevatorSetpointCommand.java  ShooterRpmCommand.java
tests/robot-java/src/main/java/frc/robot/subsystems/: BUILD  DriveTrain.java  Elevator.java  PortMap.java  Shooter.java
tests/robot/commands/: BUILD  elevator_setpoint_command.hpp  joystick_drive_command.cpp  shooter_rpm_command.cpp  shooter_rpm_command.hpp
tests/robot/subsystems/: BUILD  drivetrain.cpp  drivetrain.hpp  elevator.cpp  elevator.hpp  ports.hpp  shooter.cpp
(+19 files in other folders)
