module(
    name = "bzlmodrio",
    version = "2023.2",
    compatibility_level = 2023,
)

bazel_dep(name = "bzlmodrio-allwpilib", version = "2023.3.2")
bazel_dep(name = "bzlmodrio-apriltaglib", version = "3.2.0-3")
bazel_dep(name = "bzlmodrio-imgui", version = "1.89.1-1")
bazel_dep(name = "bzlmodrio-libssh", version = "0.95-6")
bazel_dep(name = "bzlmodrio-navx", version = "2023.0.3")
bazel_dep(name = "bzlmodrio-ni", version = "2023.3.0")
bazel_dep(name = "bzlmodrio-opencv", version = "4.6.0-4")
bazel_dep(name = "bzlmodrio-phoenix", version = "5.30.3-23.0.4")
bazel_dep(name = "bzlmodrio-revlib", version = "2023.1.2")
bazel_dep(name = "rules_bazelrio", version = "0.0.9")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2023-7")
bazel_dep(name = "rules_checkstyle", version = "10.1")
bazel_dep(name = "rules_pmd", version = "6.43.0")
bazel_dep(name = "rules_spotless", version = "2.34.0")
bazel_dep(name = "rules_wpi_styleguide", version = "1.0.0")
bazel_dep(name = "rules_wpiformat", version = "2022.30")
