module(
    name = "bzlmodrio",
    version = "2023.2",
    compatibility_level = 2023,
)

bazel_dep(name = "bzlmodrio-allwpilib", version = "2024.1.1-beta-1")
bazel_dep(name = "bzlmodrio-apriltaglib", version = "2024.3.3.0-1")
bazel_dep(name = "bzlmodrio-imgui", version = "2024.1.89.9-1")
bazel_dep(name = "bzlmodrio-libssh", version = "2024.0.105-1")
bazel_dep(name = "bzlmodrio-navx", version = "2024.0.1-beta-2")
bazel_dep(name = "bzlmodrio-ni", version = "2024.1.1")
bazel_dep(name = "bzlmodrio-opencv", version = "2024.4.8.0-1")
bazel_dep(name = "bzlmodrio-phoenix", version = "5.32.0-beta-1")
bazel_dep(name = "bzlmodrio-revlib", version = "2024.0.0")
bazel_dep(name = "rules_bazelrio", version = "0.0.13")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2024-1")
bazel_dep(name = "rules_checkstyle", version = "10.1")
bazel_dep(name = "rules_pmd", version = "6.43.0")
bazel_dep(name = "rules_spotless", version = "2.34.0")
bazel_dep(name = "rules_wpi_styleguide", version = "1.0.0")
bazel_dep(name = "rules_wpiformat", version = "2022.30")
bazel_dep(name = "bzlmodrio-photonlib", version = "v2023.4.2")
bazel_dep(name = "bzlmodrio-pathplannerlib", version = "2023.4.4")
