module(
    name = "bzlmodrio",
    version = "2023.2",
    compatibility_level = 2023,
)

bazel_dep(name = "bzlmodrio-allwpilib", version = "2024.3.2")
bazel_dep(name = "bzlmodrio-apriltaglib", version = "2024.3.3.0-1")
bazel_dep(name = "bzlmodrio-imgui", version = "2024.1.89.9-1")
bazel_dep(name = "bzlmodrio-libssh", version = "2024.0.105-1")
bazel_dep(name = "bzlmodrio-navx", version = "2024.1.0")
bazel_dep(name = "bzlmodrio-ni", version = "2024.2.1")
bazel_dep(name = "bzlmodrio-opencv", version = "2024.4.8.0-4")
bazel_dep(name = "bzlmodrio-phoenix", version = "5.33.1")
bazel_dep(name = "bzlmodrio-revlib", version = "2024.2.4")
bazel_dep(name = "rules_bazelrio", version = "0.0.14")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2024-1")
bazel_dep(name = "rules_checkstyle", version = "10.12.2")
bazel_dep(name = "rules_pmd", version = "7.2.0")
bazel_dep(name = "rules_spotless", version = "2.40.0")
bazel_dep(name = "rules_wpi_styleguide", version = "2024.06.22")
bazel_dep(name = "rules_wpiformat", version = "2024.34")
bazel_dep(name = "bzlmodrio-photonlib", version = "v2024.3.1")
bazel_dep(name = "bzlmodrio-pathplannerlib", version = "2024.2.8")
bazel_dep(name = "bzlmodrio-phoenix6", version = "24.3.0")
bazel_dep(name = "bzlmodrio-choreolib", version = "2024.2.3")
bazel_dep(name = "rules_bzlmodrio_jdk", version = "17.0.8.1-1")
