py_binary(
    name = "generate_mega_group",
    srcs = ["generate_mega_group.py"],
    deps = [
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)

py_binary(
    name = "generate",
    srcs = [
        "generate.py",
        "get_libraries_remapping.py",
        "get_mega_group.py",
        "load_repos.py",
    ],
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-allwpilib-gentool//:get_allwpilib_dependencies",
        "@bzlmodrio-imgui-gentool//:get_imgui_dependencies",
        "@bzlmodrio-libssh-gentool//:get_libssh_dependencies",
        "@bzlmodrio-navx-gentool//:get_navx_dependencies",
        "@bzlmodrio-ni-gentool//:get_ni_dependencies",
        "@bzlmodrio-opencv-gentool//:get_opencv_dependencies",
        "@bzlmodrio-phoenix-gentool//:get_ctre_dependencies",
        "@bzlmodrio-revlib-gentool//:get_rev_dependencies",
    ],
)

py_binary(
    name = "publish",
    srcs = ["publish.py"],
    visibility = ["//visibility:public"],
    deps = [
        "@bzlmodrio-gentool//bazelrio_gentool",
    ],
)
