bazel_dep(name = "bzlmodrio", version = "", repo_name = "bazelrio")
local_path_override(
    module_name = "bzlmodrio",
    path = "..",
)

bazel_dep(name = "rules_cc", version = "0.0.8")
bazel_dep(name = "rules_java", version = "6.4.0")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2023-7")
bazel_dep(name = "rules_bazelrio", version = "0.0.12")
bazel_dep(name = "rules_wpi_styleguide", version = "1.0.0")
bazel_dep(name = "rules_checkstyle", version = "10.1")
bazel_dep(name = "rules_pmd", version = "6.43.0")
bazel_dep(name = "rules_spotless", version = "2.34.0")
bazel_dep(name = "rules_wpiformat", version = "2022.30")
bazel_dep(name = "bzlmodrio-allwpilib", version = "2023.4.3")
bazel_dep(name = "bzlmodrio-phoenix", version = "5.31.0+23.2.2")
bazel_dep(name = "bzlmodrio-revlib", version = "2023.1.3")
