bazel_dep(name = "bzlmodrio", version = "", repo_name = "bazelrio")
local_path_override(
    module_name = "bzlmodrio",
    path = "..",
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "rules_java", version = "7.6.1")
bazel_dep(name = "rules_bzlmodrio_toolchains", version = "2024-1")
bazel_dep(name = "rules_bazelrio", version = "0.0.14")
bazel_dep(name = "rules_wpi_styleguide", version = "2024.06.22")
bazel_dep(name = "rules_checkstyle", version = "10.12.2")
bazel_dep(name = "rules_pmd", version = "7.2.0")
bazel_dep(name = "rules_spotless", version = "2.40.0")
bazel_dep(name = "rules_wpiformat", version = "2024.34")
bazel_dep(name = "bzlmodrio-allwpilib", version = "2024.3.2")
bazel_dep(name = "bzlmodrio-navx", version = "2024.1.0")
bazel_dep(name = "bzlmodrio-revlib", version = "2024.2.4")
bazel_dep(name = "bzlmodrio-phoenix6", version = "24.3.0")
bazel_dep(name = "rules_bzlmodrio_jdk", version = "17.0.8.1-1")
