load("@rules_bazelrio//:robot_rules.bzl", "robot_cc_binary")
load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "robot-lib",
    srcs = [
        "main.cpp",
        "robot.cpp",
    ],
    hdrs = ["robot.hpp"],
    deps = [
        "//robot-cpp/commands",
        "//robot-cpp/subsystems",
        "@bzlmodrio-allwpilib//libraries/cpp/cameraserver",
    ],
)

cc_library(
    name = "robot-main",
    srcs = ["main.cpp"],
    deps = [
        "robot-lib",
    ],
)

robot_cc_binary(
    name = "robot",
    halsim_deps = ["@bzlmodrio-allwpilib//libraries/cpp/halsim_gui"],
    lib_name = "robot-main",
    team_number = 9999,
)
